# CoT_Converter

./: .gitignore  LICENSE  README.md  cot_generator.py  data_package_gen.py  fixed_kml_to_cot.py  kml_parser.py  kml_splitter.py  kml_to_cot.py  main.py  manifest.xml  pyproject.toml  utils.py
CoT_Converter/: __init__.py  cot_generator.py  kml_parser.py  kml_splitter.py  kmz_to_kml.py  utils.py
