[project]
name = "cot_converter"
version = "0.1.0"
description = "Converts various files to Cursor on Target files for the TAK system."
authors = [
    {name = "None"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.3"
dependencies = [
    "lxml (>=5.4.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
